# biohackathon2025-paper

./: README.md
.github/workflows/: gen_pdf.yaml
maturity/: biotools_github_map.csv  biotools_with_metrics.csv  biotools_with_metrics_and_maturity.csv  calculate_statistics.py  fetch_GitHub_metrics.py  fetch_biotools_IDs_and_GitHub_URLs.py  fetch_biotools_maturity.py  pyproject.toml
paper/: paper.bib  paper.md
