[project]
name = "maturity"
version = "0.1.0"
description = ""
authors = [
    {name = "Magnus Palmblad",email = "n.m.palmblad@lumc.nl"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
